fixed bugs with notes not being deleted now also entries deleted when notes are, fixed a bug with log out crushing app and also fixed css issue with focus on mobile

--- a/src/app/my-notes/note/[noteId]/styles/notePage.module.css
+++ b/src/app/my-notes/note/[noteId]/styles/notePage.module.css
@@ -55,8 +55,10 @@
     font-size: 1.1em;
 }
 
-.noteListItem:hover, .noteListItemOdd:hover {
-    background-color: var(--secondary-color-faded);
+@media (hover: hover) {
+    .noteListItem:hover:hover, .noteListItemOdd:hover {
+        background-color: var(--secondary-color-faded);
+    }
 }
 
 .noteListItemOdd {
